--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,15 @@ buildscript {
 
 plugins {
 	id 'java'
+	id 'org.springframework.boot' version '2.1.2.RELEASE' apply false
+	id 'io.spring.dependency-management' version '0.6.1.RELEASE' apply false
 }
 
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-group = 'com.tradeservice'
+group = 'com.productservice'
 version = '0.0.1'
 sourceCompatibility = '1.8'
 
@@ -22,15 +26,22 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web:2.1.14.RELEASE')
 	//compile ('org.projectlombok:lombok:1.16.12')
 	//compile("org.springframework.boot:spring-boot-starter-actuator")
-	//implementation('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test:2.1.14.RELEASE')
 	testCompile group: 'junit', name: 'junit', version: '4.13.1'
 	testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
 	testCompile "org.testng:testng:6.+"
+	
+	//H2 database
+	//compile "org.springframework.boot:spring-boot-starter-data-jpa:2.2.0.RELEASE"
+	//compile('org.springframework.boot:spring-boot-starter-jdbc')
+	implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.5'
+	testImplementation group: 'com.h2database', name: 'h2', version: '1.3.148'
+	
 }
 
 jar{
  manifest {
-        attributes 'Main-Class': 'com.tradeservice.TradeStoreApplication'
+        attributes 'Main-Class': 'com.productservice.ProductApplication'
     }
 }
