--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.port=5000
 
 spring.profiles.active=default
 spring.config.name=security
+
+spring.datasource.url=jdbc:h2:mem:javatpoint
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#enabling the H2 console.
+spring.h2.console.enabled=true
